--- a/localization/fr/Blocks/GeneralFields.json
+++ b/localization/fr/Blocks/GeneralFields.json
@@ -3,6 +3,7 @@
     "Block.Carte.Presence.Ponct":"Pays où la Communauté du Chemin Neuf fait des propositions ponctuelles",
 				"Block.Carte.Presence.Perm.Cana":"Mission CANA avec présence permanente de la Communauté du Chemin Neuf",
     "Block.Carte.Presence.Ponct.Cana":"Mission CANA avec présence ponctuelle de la Communauté du Chemin Neuf",
+				"Block.Carte.Liste":"Liste des pays",
     "Missions.cana":"Cana : au service du couple et de la famille",
     "Missions.netforgod":"Net for God - Fraternité Oecuménique Internationale",
     "Missions.ados":"Mission Jeunes 14-18 ans",
