--- a/localization/nl/Blocks/GeneralFields.json
+++ b/localization/nl/Blocks/GeneralFields.json
@@ -16,7 +16,7 @@
     "Missions.jeunes":"Jongerenmissie 18-30 jaar",
     "Missions.foyers":"Foyers d'étudiants",
     "Missions.jet":"JET - Internationale vrijwilligers",
-    "Block.Mail.SendMail":"Send mail",
+    "Block.Mail.SendMail":"Verzend e-mail",
     "Block.Inscription.Telephone":"Téléphone",
     "InfosPratiques":"Praktische info",
     "Inscription":"Inschrijving",
